welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:8: error: not found: value True
  if (estFaceMur()==True) {
                    ^SlugTracking:8: error: type mismatch;
 found   : Unit
 required: Boolean
  if (estFaceMur()==True) {
  ^